# midi-tools

./: README.md
midi_arturia-keylab-display/: midi_arturia_lcd.py
midi_event_spy/: .gitignore  form.ui  mainwindow.py  pyproject.toml  requirements.txt  ui_form.py
midi_jack_transport/: transport.py
midi_lcd/: midi_arturia_lcd.py
midi_reader/: .gitignore  form.ui  mainwindow.py  midi_numbers.py  midi_reader.pyproject  midifile_reader.py  ui_form.py
