[project]
name = "midi-event-spy"
version = "0.1.0"
description = ""
authors = [
    {name = "obooklage"}
]
readme = "README.md"
requires-python =  ">=3.12,<3.14"
dependencies = [
    "mido (>=1.3.3,<2.0.0)",
    "pyside6 (>=6.8.1.1,<7.0.0.0)",
    "python-rtmidi (>=1.5.8,<2.0.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
