[tool.poetry]
name = "midi-event-spy"
version = "0.1.0"
description = ""
authors = ["obooklage"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
mido = "^1.3.2"
python-rtmidi = "^1.5.8"
pyside6 = "^6.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
