[project]
name = "midi-event-spy"
version = "0.1.0"
description = ""
authors = [{ name = "obooklage" }]
requires-python = ">=3.10,<3.13"
readme = "README.md"
dependencies = [
    "mido>=1.3.2,<2",
    "python-rtmidi>=1.5.8,<2",
    "pyside6>=6.7.2,<7",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
